apps/core-api/overlays/production/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/environment: production
        app.kubernetes.io/instance: core-api-production
    spec:
      containers:
        - name: app
