apps/core-api/overlays/production/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-api
spec:
  tls:
    - hosts:
        - core-api.example.com
      secretName: core-api-tls
  rules:
    - host: core-api.example.com
